worked on a different predictor. Still doesn't work but maybe i need to invert something still